[package]
name = "bene"
version = "0.1.0"
edition = "2021"
description = "A command line argument parser/reader"
readme = "README.md"
repository = "https://github.com/sagansfault/bene"
license = "MIT OR Apache-2.0"
keywords = ["commandline", "args", "parser"]
categories = ["parsing", "parser-implementations", "value-formatting"]

[dependencies]
regex = "1.8.1"
